[package]
name = "layout_switcher"
version = "0.1.0"
edition = "2021"

[dependencies]
udev = "0.6.2"
libusb = "0.3"
simple-error = "0.2.3"
common_macros = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
home = "0.5.3"
clap = { version = "3.0.14", features = ["derive"] }

